Applied 'box-sizing: border-box' to all elements. Not sure why, but this fixes some odd gaps between grid squares that appear in Google Chrome. A comment beneath the change explains why it's there.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+		* {
+			box-sizing: border-box;
+		}
+		//fixes gaps between grid squares
+		
 		body {
 			display: flex;
 			flex-direction: column;
